--- a/res/layout/activity_bluetooth_test.xml
+++ b/res/layout/activity_bluetooth_test.xml
@@ -1,12 +1,38 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".BluetoothTestActivity" >
-    
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/bluetoothtest_text" />
-
+    android:orientation="vertical"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    >
+<TextView  
+    android:layout_width="fill_parent" 
+    android:layout_height="wrap_content" 
+    android:text="@string/hello"
+    />
+<TextView 
+    android:id="@+id/bluetoothstate" 
+    android:layout_width="fill_parent" 
+    android:layout_height="wrap_content" 
+    />
+<TextView
+    android:id="@+id/bluetoothstate" 
+    android:layout_width="fill_parent" 
+    android:layout_height="wrap_content" 
+    />
+<TextView
+    android:layout_width="fill_parent" 
+    android:layout_height="wrap_content" 
+    android:text="Set Discoverable Duration" 
+    />
+<Button
+    android:id="@+id/scandevice" 
+    android:layout_width="fill_parent" 
+    android:layout_height="wrap_content"
+    android:text="Scan Bluetooth Devices" 
+    android:enabled="false"
+    /> 
+<ListView
+    android:id="@+id/devicesfound" 
+    android:layout_width="fill_parent" 
+    android:layout_height="fill_parent"
+    /> 
 </LinearLayout>
